Fri Jan  5 15:37:18 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnyTypeCode/DynamicC.h:
          Added typedef for _out_type to ParameterList, the IDL does
          generate this but this file is handcrafted and not updated
          when the IDL compiler was changed

Fri Jan  5 15:07:46 UTC 2007  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * tests/TransportCurrent/IIOP/client.cpp:

          Testing for minimum corba was wrong, causing invalid reference
          to Object::_request member in minimum corba builds.

Fri Jan  5 13:35:47 UTC 2007  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * MPC/config/tc.mpb:

          Added interceptors and pi as bases to ensure the derived
          projects are not built prior, or without their prerequisites.

        * tests/TransportCurrent/Framework/Framework.mpc:
        * tests/TransportCurrent/IIOP/IIOP.mpc:
        * tests/TransportCurrent/lib/Current_Test_Lib.mpc:

          Added tc (which derives from pi and interceptors) as base and
          also simplified the base project lists. This ensures the tests
          are skipped if TC is not built (for instance with
          corba_e_compact).

Fri Jan  5 13:07:32 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/tests/EC_Mcast/EC_Mcast.cpp (open_senders):

          Switched from using a macro for the buffer length used in
          gathering the ingore address as a string to using a literal
          constant. This is consistent with common usage of addr_to_string
          throughout the ACE/TAO codebase, and avoids adding potentially
          system-specific includes at the application level.

Fri Jan  5 13:04:18 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OBV/ValueBox/client.cpp:
          Renamed VERIFY to OBV_VERIFY to resolve redefinition warnings
          in the MFC builds

Fri Jan  5 11:00:00 UTC 2007  Simon Massey  <sma@prismtech.com>
