@@ -48,9 +48,18 @@ if ($client != 0) {
 
 $server1 = $SV1->WaitKill (5);
 
+# The first server will crash by design and in such instance it will
+# return the magic number 1. The test must not interpret it as an
+# error.
+
 if ($server1 != 0) {
-    print STDERR "ERROR: server1 returned $server1\n";
-    $status = 1;
+    if ($server1 != 1) {
+        print STDERR "ERROR: server1 returned $server1\n";
+        $status = 1;
+    }
+    else {
+        print STDERR "INFO: server1 commited suicide as expected\n";
+    }
 }
 
 $server2 = $SV2->WaitKill (5);
